--- a/documentation/model.html
+++ b/documentation/model.html
@@ -15,12 +15,12 @@ more_selected: selected
     </div>
     <h2 name="declarative_javascript">Declarative Javascript</h2>
     <div class="model_para">
-      <p>Uranium works with declarative Javascript. What this means is that we give elements in the HTML specific attributes. These attributes tell the javascript what to do.</p>
+      <p>Uranium works with declarative Javascript. What this means is that we give elements in the HTML specific attributes. These attributes tell the Javascript what to do.</p>
       <p>Here are a couple of simple examples:</p>
 {% highlight html %}
 <div data-ur-set='toggler'>    </div>
 {% endhighlight %}
-      <p>This attribute tells javascript to treat this div tag as a toggler set.</p>
+      <p>This attribute tells Javascript to treat this div tag as a toggler set.</p>
       <p>And this:</p>
 {% highlight html %}
 <span data-ur-toggler-component='button' data-ur-state='enabled'>    </span>
