--- a/site/documentation/overview.html
+++ b/site/documentation/overview.html
@@ -103,7 +103,7 @@
     <section id="additional_resources">
       <h2>Additional Resources</h2>
       <h3>Tutorials</h3>
-      <p>To familiarize yourself with how Uranium can be added to a page, we've written up some tutorials demonstrating how to work through a basic and an advanced Uranium project. As you'll see, even the advanced example follows the same basic philosophy, allowing you to integration useful Javascript interactions just by adding a few declarative elements to your HTML.</p>
+      <p>To familiarize yourself with how Uranium can be added to a page, we've written up some tutorials demonstrating how to work through a basic and an advanced Uranium use-case. As you'll see, even the advanced example follows the same basic philosophy, allowing you to integration useful Javascript interactions just by adding a few declarative elements to your HTML.</p>
       <ul>
         <li><a href="/documentation/getting_started.html">Basic Use</a> &mdash; Creating a simple toggler</li>
         <li><a href="/documentation/advanced.html">Advanced Use</a> &mdash; Building a custom carousel with optional features</li>
