About page alphebetisation

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@ about_selected: selected
   <h2>Why use Uranium?</h2>
   <h3>It's Lightweight</h3>
   <p>
-    The whole Uranium library is 15 KB zipped! This includes all the widgets and <a href="http://xuijs.com">xui</a>.
+    The whole Uranium library is 7KB zipped! This includes all the widgets and <a href="http://xuijs.com">xui</a>.
   </p>
   
   <h3>It's Easy to Use</h3>
@@ -25,51 +25,32 @@ about_selected: selected
     <h2 data-ur-toggler-component="button">Sean Jezewski</h2>
     <div data-ur-toggler-component="content">
       <img src="stylesheets/resources/moov1.JPG"/>
-      <p class="bio">Sean is the lead architect on Uranium - core design and philosophy.. He's the guy to
-        go to for most Uranium questions.</p>
+      <p class="bio"><a href="https://github.com/sjezewski">Sean</a> is the lead architect on Uranium - core design and philosophy.</p>
     </div>
   </div>
   <div data-ur-set="toggler">
     <h2 data-ur-toggler-component="button">Jeff Patzer</h2>
     <div data-ur-toggler-component="content">
       <img src="stylesheets/resources/moov10.jpg"/>
-      <p class="bio">Jeff created the awesome <a href="{{site.url}}geocode.html">geocode widget</a>,
+      <p class="bio"><a href="https://github.com/jpatzer">Jeff</a> created the awesome <a href="{{site.url}}geocode.html">geocode widget</a>,
         which allows you to reverse-geocode a user's location. The information gained
         is then used to populate a form.</p>
     </div>
   </div>
   <div data-ur-set="toggler">
-    <h2 data-ur-toggler-component="button">Kevin Liou</h2>
-    <div data-ur-toggler-component="content">
-      <img src="stylesheets/resources/moov13.jpg"/>
-      <p class="bio">Kevin has been paramount in the Uranium refresh and helped converted many of the widgets from xui to jquery. </p>
-    </div>
-  </div>
-  <div data-ur-set="toggler">
-    <h2 data-ur-toggler-component="button">Wonja Fairbrother</h2>
-    <div data-ur-toggler-component="content">
-      <img src="stylesheets/resources/moov12.jpg"/>
-      <p class="bio">Wonja transitioned the <a href="{{site.url}}carousel.html">carousel widget</a> from using xui to jquery.</p>
-    </div>
-  </div>
-  <div data-ur-set="toggler">
-    <h2 data-ur-toggler-component="button">Jessica Pan</h2>
-    <div data-ur-toggler-component="content">
-      <img src="stylesheets/resources/moov11.jpg"/>
-      <p class="bio">Jessica refreshed the Uranium website.</p>
-    </div>
-  </div>
-  <div data-ur-set="toggler">
     <h2 data-ur-toggler-component="button">And More...</h2>
     <div data-ur-toggler-component="content">
-      <p class="bio"><a href="https://github.com/cagria">Hampton Catlin</a></p>
-      <p class="bio"><a href="https://github.com/cagria">Aaron Leung</a></p>
-      <p class="bio"><a href="https://github.com/cagria">Sam Merry</a></p>
-      <p class="bio"><a href="https://github.com/malrase">Michael Catlin</a></p>
-      <p class="bio"><a href="https://github.com/letrest">Tevfik Sertel</a></p>
-      <p class="bio"><a href="https://github.com/hlui">Honie Lui</a></p>
       <p class="bio"><a href="https://github.com/benbayard">Ben Bayard</a></p>
+      <p class="bio"><a href="https://github.com/hcatlin">Hampton Catlin</a></p>
+      <p class="bio"><a href="https://github.com/malrase">Michael Catlin</a></p>
+      <p class="bio"><a href="https://github.com/wonja">Wonja Fairbrother</a></p>
+      <p class="bio"><a href="https://github.com/akhleung">Aaron Leung</a></p>
+      <p class="bio"><a href="https://github.com/kwliou">Kevin Liou</a></p>
+      <p class="bio"><a href="https://github.com/hlui">Honie Lui</a></p>
+      <p class="bio"><a href="https://github.com/sammerry">Sam Merry</a></p>
       <p class="bio"><a href="https://github.com/cagria">Cagri Ozertem</a></p>
+      <p class="bio"><a href="https://github.com/shijing">Jessica Pan</a></p>
+      <p class="bio"><a href="https://github.com/letrest">Tevfik Sertel</a></p>
     </div>
   </div>
 </div>
