Fixing header on geocode subpages plus the tabs interaction now shows up on small screens

--- a/site/interactions/tabs.html
+++ b/site/interactions/tabs.html
@@ -155,7 +155,7 @@
   <h3 data-ur-tabs-component="button" data-ur-tab-id="example" data-ur-state="enabled"> Example</h3>
   <h3 data-ur-tabs-component="button" data-ur-tab-id="html">The Code</h3>
 
-  <div id="tabs_interaction" class="example_interaction example"  data-ur-tabs-component="content" data-ur-tab-id="interaction" data-ur-state="enabled">
+  <div id="tabs_interaction" class="example_interaction example"  data-ur-tabs-component="content" data-ur-tab-id="example" data-ur-state="enabled">
 
     <div data-ur-set="tabs" id="tabs_examples_page" data-ur-state="enabled">
       <span data-ur-tabs-component="button" data-ur-tab-id="one" data-ur-state="enabled"> First </span>
