Small change to carousel tutorial example widget width and wording for the toggler

--- a/interactions/toggler.html
+++ b/interactions/toggler.html
@@ -51,7 +51,7 @@ advanced_tab:
 
 <!-- Recommended SCSS -->
 <div class='wrapper'>
-  <h2>   Styles </h2>
+  <h2> Recommended Styles </h2>
 {% highlight scss %}
 /* Recommended SCSS Styling */
 [data-ur-set='toggler'] {
@@ -85,7 +85,7 @@ advanced_tab:
   
     <div class='description'>
       <p>
-        And if we want something to start out visible, and then disappear when we click on the button, we can just add the <code>data-ur-state="enabled"</code> attribute to the button and its content.
+        If we want something to start out visible, and then disappear when we click on the button, we can just add the <code>data-ur-state="enabled"</code> attribute to the button and its content.
       </p>
 {% highlight html %}
 <div data-ur-set="toggler">
