Changing some classes and ids from widget to interaction

--- a/interactions/geocode.html
+++ b/interactions/geocode.html
@@ -55,10 +55,10 @@ advanced_tab:
   <h2>Demonstration</h2>
   <p>The demonstration here activates on load – as long as location services are enabled.</p>
   <div id="tabs_demonstration" data-ur-set="tabs" class="ur_ex">
-    <h3 data-ur-tabs-component="button" data-ur-tab-id="widget" data-ur-state="enabled"> Example</h3>
+    <h3 data-ur-tabs-component="button" data-ur-tab-id="interaction" data-ur-state="enabled"> Example</h3>
     <h3 data-ur-tabs-component="button" data-ur-tab-id="html">The Code</h3>
 
-    <div id="toggler_widget" class="example_widget example"  data-ur-tabs-component="content" data-ur-tab-id="widget" data-ur-state="enabled">
+    <div id="toggler_widget" class="example_interaction example" data-ur-tabs-component="content" data-ur-tab-id="interaction" data-ur-state="enabled">
       <form data-ur-set="reverse-geocode" action="geocode_submit" method="get" accept-charset="utf-8" >
         <input type="text" name="addr_1" value="" id="street_address" placeholder="street address" data-ur-reverse-geocode-component="rg-street">
         <input type="text" name="city" value="" id="city" placeholder="city" data-ur-reverse-geocode-component="rg-city">
