--- a/interactions/input_clear.html
+++ b/interactions/input_clear.html
@@ -15,10 +15,10 @@ advanced_tab:
 ---
 <h2 class='wrapper'>Demonstration</h2>
 <div id="input_clear_demonstration" data-ur-set="tabs" class="ur_ex">
-  <h3 data-ur-tabs-component="button" data-ur-tab-id="widget" data-ur-state="enabled"> Example</h3>
+  <h3 data-ur-tabs-component="button" data-ur-tab-id="interaction" data-ur-state="enabled"> Example</h3>
   <h3 data-ur-tabs-component="button" data-ur-tab-id="html">The Code</h3>
 
-  <div id="input_clear_widget" class="example_widget example"  data-ur-tabs-component="content" data-ur-tab-id="widget" data-ur-state="enabled">
+  <div id="input_clear_widget" class="example_interaction example"  data-ur-tabs-component="content" data-ur-tab-id="interaction" data-ur-state="enabled">
     <div data-ur-set='input-clear'>
       <input data-ur-input-clear-component='input' type='text'/>
     </div>
