--- a/site/index.html
+++ b/site/index.html
@@ -146,7 +146,7 @@
 
       <h3 data-ur-tabs-component="button" data-ur-tab-id="tabs_CSS">CSS</h3>
 
-      <div id="tab_widget" class="example_widget" data-ur-tabs-component="content" data-ur-tab-id="tabs_interaction" data-ur-state="enabled">
+      <div id="tab_interaction" class="example_interaction" data-ur-tabs-component="content" data-ur-tab-id="tabs_interaction" data-ur-state="enabled">
         <div data-ur-set="tabs" data-ur-id="tabs_example">
           <span data-ur-tabs-component="button" data-ur-tab-id="one" data-ur-state="enabled"> First </span>
           <span data-ur-tabs-component="button" data-ur-tab-id="two"> Second </span>
