--- a/site/interactions/geocode/text_inputs.html
+++ b/site/interactions/geocode/text_inputs.html
@@ -48,10 +48,10 @@
   <h2>Demonstration</h2>
   <p>The demonstration activates on button click.</p>
   <div id="geocode_demonstration" data-ur-set="tabs" class="ur_ex">
-    <h3 data-ur-tabs-component="button" data-ur-tab-id="widget" data-ur-state="enabled"> Example</h3>
+    <h3 data-ur-tabs-component="button" data-ur-tab-id="interaction" data-ur-state="enabled"> Example</h3>
     <h3 data-ur-tabs-component="button" data-ur-tab-id="html">The Code</h3>
 
-    <div id="geocode_widget" class="example_widget example"  data-ur-tabs-component="content" data-ur-tab-id="widget" data-ur-state="enabled">
+    <div id="geocode_widget" class="example_interaction example"  data-ur-tabs-component="content" data-ur-tab-id="interaction" data-ur-state="enabled">
         <form data-ur-set="reverse-geocode" action="geocode_submit" method="get" accept-charset="utf-8" >
           <button  value="clickMe" type='button' data-ur-reverse-geocode-component="rg-button">Click here to find your location</button>
           <br/>
