adding in better images for the carousel

--- a/widgets/carousel.html
+++ b/widgets/carousel.html
@@ -236,13 +236,13 @@ instance:
   <div data-ur-carousel-component="button" data-ur-carousel-button-type="next">Next</div>
   <div data-ur-carousel-component='scroll_container'>
     <img data-ur-carousel-component='item' src='images/sample1.png' alt="1" />
-    <img data-ur-carousel-component='item' src='images/sample2.png' alt="2" />
-    <img data-ur-carousel-component='item' src='images/sample3.png' alt="3" />
-    <img data-ur-carousel-component='item' src='images/sample4.png' alt="4" />
-    <img data-ur-carousel-component='item' src='images/sample5.png' alt="5" />
-    <img data-ur-carousel-component='item' src='images/sample6.png' alt="6" />
-    <img data-ur-carousel-component='item' src='images/sample7.png' alt="7" />
-    <img data-ur-carousel-component='item' src='images/sample8.png' alt="8" />
+    <img data-ur-carousel-component='item' src='http://placekitten.com/g/200/200' alt="2" />
+    <img data-ur-carousel-component='item' src='http://placekitten.com/g/200/200' alt="3" />
+    <img data-ur-carousel-component='item' src='http://placekitten.com/g/200/200' alt="4" />
+    <img data-ur-carousel-component='item' src='http://placekitten.com/g/200/200' alt="5" />
+    <img data-ur-carousel-component='item' src='http://placekitten.com/g/200/200' alt="6" />
+    <img data-ur-carousel-component='item' src='http://placekitten.com/g/200/200' alt="7" />
+    <img data-ur-carousel-component='item' src='http://placekitten.com/g/200/200' alt="8" />
   </div>
 </div>
 {% endhighlight %}
